apps/nanomq/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-gateway-to-nanomq
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: TCPRoute
      namespace: gateway
  to:
    - group: ""
      kind: Service
      name: nanomq
