apps/nanomq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nanomq
spec:
  ports:
    - port: 1883
      protocol: TCP
      targetPort: mqtt
      name: mqtt
    - port: 8883
      protocol: TCP
      targetPort: mqtts
      name: mqtts
    - port: 8083
      protocol: TCP
      targetPort: ws
      name: ws
    - port: 8084
      protocol: TCP
      targetPort: wss
      name: wss
