apps/nanomq/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: nanomq-mqtts
spec:
  hostnames:
    - nanomq.homie.e10n.me
  parentRefs:
    - name: nanomq
      sectionName: mqtts
      namespace: gateway
  rules:
    - backendRefs:
        - name: nanomq
          port: 8883
